# vkrenderer

./: CMakeLists.txt  README.md
include/GLFW/: glfw3.h
include/app/: app.h
include/gfx/vk/: vk_buffer.h  vk_cmd_buffers.h  vk_cmd_pool.h  vk_context.h  vk_debug.h  vk_device.h  vk_ext.h  vk_framebuffers.h  vk_gpu.h  vk_img_views.h  vk_instance.h  vk_pipeline.h  vk_pipeline_layout.h  vk_present_img.h  vk_queue.h  vk_render_pass.h  vk_shaders.h  vk_surface.h  vk_swapchain.h  vk_sync_obj.h  vk_vertex.h  vk_window.h
libs/licenses/vulkan/: LICENSE.txt
shaders/: fragment.frag  vertex.vert
src/: main.c
src/app/: app.c
src/gfx/vk/: vk_buffer.c  vk_cmd_buffers.c  vk_cmd_pool.c  vk_context.c  vk_debug.c  vk_device.c  vk_ext.c  vk_framebuffers.c  vk_gpu.c  vk_img_views.c  vk_instance.c  vk_pipeline.c  vk_pipeline_layout.c  vk_present_img.c  vk_queue.c  vk_render_pass.c  vk_shaders.c  vk_surface.c  vk_swapchain.c  vk_sync_obj.c  vk_vertex.c  vk_window.c
